--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
-    hello
+    <h1>Hello Sonam....</h1>
 </body>
 </html>
